--- a/HorasExtrasAPI/HorasExtrasAPI/appsettings.Development.json
+++ b/HorasExtrasAPI/HorasExtrasAPI/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+
+
+  "ConnectionString": {
+    "SqlConexionHorasExtras": "Data Source=DESKTOP-8MCG2IG\\SQLEXPRESS;Initial Catalog=HorasExtras;Integrated Security=True"
+  }
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
