--- a/HorasExtrasAPI/HorasExtrasAPI/HorasExtrasAPI.csproj
+++ b/HorasExtrasAPI/HorasExtrasAPI/HorasExtrasAPI.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Json.Net" Version="1.0.33" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.22" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
