--- a/HorasExtrasAPI/HorasExtrasAPI/appsettings.Development.json
+++ b/HorasExtrasAPI/HorasExtrasAPI/appsettings.Development.json
@@ -1,9 +1,9 @@
 ﻿{
 
-
   "ConnectionString": {
-    "SqlConexionHorasExtras": "Data Source=DESKTOP-8MCG2IG\\SQLEXPRESS;Initial Catalog=HorasExtras;Integrated Security=True"
-  }
+    "SqlConexionHorasExtras": "Data Source=DESKTOP-8MCG2IG\\SQLEXPRESS;Initial Catalog=HorasExtras;Integrated Security=True" 
+
+  },
 
   "Logging": {
     "LogLevel": {
@@ -11,5 +11,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "Jwt": {
+    "Key": "jdhsjdcbnskdjbsjdbkdsjdehukwe25656820@",
+    "Issuer": "http://localhost:4200"
+  },
+  "Clientes": {
+    "AppHorasExtras": "http://localhost:4200"
   }
 }
