Instalacion de fontawesome, bootstrap

--- a/HorasExtrasAPI/HorasExtrasAPI/appsettings.Development.json
+++ b/HorasExtrasAPI/HorasExtrasAPI/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
 
-  "ConnectionString": {
-    "SqlConexionHorasExtras": "Data Source=DESKTOP-8MCG2IG\\SQLEXPRESS;Initial Catalog=HorasExtras;Integrated Security=True" 
+  "ConnectionStrings": {
+    "SqlConexionHorasExtras": "Data Source=DESKTOP-8MCG2IG\\SQLEXPRESS;Initial Catalog=HorasExtras;Integrated Security=True"
 
   },
 
